2019-10-18 Luigi Scarso <luigi.scarso@gmail.com>
	* following https://tug.org/pipermail/tlbuild/2019q3/004553.html
          we have now define(__sparc)

2019-10-13 Luigi Scarso <luigi.scarso@gmail.com>
	* additional primitives  \eTeXglue[stretch|shrink]order for querying order the etex way (HH)
	* extra features runtoks (HH)
	* tex.getmodenames() (as these can differ per engine/version) (HH)
	* permit nested runtoks in more complex situations of nesting (HH)
	* more accurate and correct test for tex.[set|get]math
	* minor clean-up and bugs fixed



2019-08-12 Luigi Scarso <luigi.scarso@gmail.com>
	* Support new option --cnf-line from  kapthsea.


2019-07-27 Luigi Scarso <luigi.scarso@gmail.com>
	* Fixed \opein, to be consistent with pdftex in opening
	  a file without extension (but not enclosed in {})

2019-07-06 Luigi Scarso <luigi.scarso@gmail.com>
	* Integration of harfbuzz. 
	* Splitting of exe into *hbtex variants.

2019-02-19 Luigi Scarso <luigi.scarso@gmail.com>
	* am/luatex.am ([un]install-lua[jit]tex-links) [MINGW32]:
	different commands for mingw.

2018-08-27 Luigi Scarso <luigi.scarso@gmail.com>
	* dropped dependency from gmp and mpfr


2017-11-02 Luigi Scarso <luigi.scarso@gmail.com>
	LuaFilesystem 1.7.0

2017-10-03  Luigi Scarso <luigi.scarso@gmail.com>
	A not exhaustive list of changes:

	* luaffi/: Fix to compile with gcc 7.1, 
	patch for callbacks.
	* lpeg/: version 1.0.1

	* luatex.c: We conform to the way Web2c does handle trailing tabs and spaces. This
	decade old behaviour was changed in September 2017 and can introduce
	compatibility issues in existing workflows. Because we don't want too
	many differences with upstream TeXlive we just follow up on that patch
	and it's up to macro packages to deal with possible issues (which can be
	done via the usual callbacks. One can wonder why we then still prune
	spaces but we leave that to the reader.

	* option to set exit code (status.setexitcode) (HH). Changed paths: